[project]
name = "task-manager"
version = "0.1.0"
description = "A simple task manager built with FastAPI and SQLite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
